Uploaded image for project: 'Log4cxx'
  1. Log4cxx
  2. LOGCXX-249

ConsoleAppender crashes if layout is not set

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 0.10.0
    • 0.11.0
    • Appender
    • None

    Description

      On Mar 6, 2008, at 4:27 PM, Dale King wrote on log4cxx-user:

      I built using visual studio and ran into a couple of problems to report.
      ...

      I used a properties file and configured a ConsoleAppender but did not
      set the layout for it. Instead of nicely handling it, it crashed the
      application. Probably should fail more gracefully.


      Dale King

      Attachments

        Activity

          People

            carnold@apache.org Curt Arnold
            carnold@apache.org Curt Arnold
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: