LOGCXX-249: ConsoleAppender crashes if layout is not set